<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".EditActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/edit_title"
        android:textColor="@color/colorText1"
        android:background="@color/gray_100"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/ed_name_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="textPersonName"/>
    <EditText
        android:id="@+id/ed_phone_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="phone"/>
    <EditText
        android:id="@+id/ed_email_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"/>
    <Button
        android:id="@+id/btn_del"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_del"/>
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray_500"
        android:text="@string/btn_close"/>

</LinearLayout>